Convert HEIC images to JPG for browser compatibility

--- a/for-you.html
+++ b/for-you.html
@@ -746,8 +746,8 @@
 
             <!-- First grid - 2 photos -->
             <div class="photo-grid two-col">
-                <img src="images/IMG_9248.HEIC" alt="Us" class="memory-photo">
-                <img src="images/IMG_9339.HEIC" alt="Us" class="memory-photo">
+                <img src="images/IMG_9248.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_9339.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="love-note">
@@ -757,7 +757,7 @@
 
             <!-- Featured single photo -->
             <div class="photo-grid single">
-                <img src="images/IMG_9490.HEIC" alt="Us" class="memory-photo featured">
+                <img src="images/IMG_9490.jpg" alt="Us" class="memory-photo featured">
             </div>
             <p class="photo-caption">this one's my favorite btw ↑</p>
 
@@ -765,9 +765,9 @@
 
             <!-- Three column grid -->
             <div class="photo-grid three-col">
-                <img src="images/IMG_9492.HEIC" alt="Us" class="memory-photo">
-                <img src="images/IMG_9540.HEIC" alt="Us" class="memory-photo">
-                <img src="images/IMG_9568.HEIC" alt="Us" class="memory-photo">
+                <img src="images/IMG_9492.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_9540.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_9568.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="love-note">
@@ -777,8 +777,8 @@
 
             <!-- Two more photos -->
             <div class="photo-grid two-col">
-                <img src="images/IMG_9573.HEIC" alt="Us" class="memory-photo tall">
-                <img src="images/IMG_9662.HEIC" alt="Us" class="memory-photo tall">
+                <img src="images/IMG_9573.jpg" alt="Us" class="memory-photo tall">
+                <img src="images/IMG_9662.jpg" alt="Us" class="memory-photo tall">
             </div>
 
             <div class="countdown-card">
@@ -788,14 +788,14 @@
 
             <!-- More photos -->
             <div class="photo-grid single">
-                <img src="images/IMG_5236.heic" alt="Us" class="memory-photo featured">
+                <img src="images/IMG_5236.jpg" alt="Us" class="memory-photo featured">
             </div>
 
             <div class="divider-hearts">💗 💗 💗</div>
 
             <div class="photo-grid two-col">
-                <img src="images/IMG_6127.HEIC" alt="Us" class="memory-photo">
-                <img src="images/IMG_7991.HEIC" alt="Us" class="memory-photo">
+                <img src="images/IMG_6127.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_7991.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="love-note">
@@ -805,9 +805,9 @@
 
             <!-- LP images -->
             <div class="photo-grid three-col">
-                <img src="images/lp_image.HEIC" alt="Us" class="memory-photo">
-                <img src="images/lp_image 2.HEIC" alt="Us" class="memory-photo">
-                <img src="images/lp_image 3.HEIC" alt="Us" class="memory-photo">
+                <img src="images/lp_image.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image 2.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image 3.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="divider-hearts">♡ ♡ ♡</div>
