Fix image conversion - proper JPG files with correct sizes

--- a/for-you.html
+++ b/for-you.html
@@ -806,8 +806,8 @@
             <!-- LP images -->
             <div class="photo-grid three-col">
                 <img src="images/lp_image.jpg" alt="Us" class="memory-photo">
-                <img src="images/lp_image 2.jpg" alt="Us" class="memory-photo">
-                <img src="images/lp_image 3.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image_2.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image_3.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="divider-hearts">♡ ♡ ♡</div>
