Add 22 more photos to birthday gallery

--- a/for-you.html
+++ b/for-you.html
@@ -775,10 +775,39 @@
                 <span class="note-emoji">💕</span>
             </div>
 
+            <!-- New photos batch 1 -->
+            <div class="photo-grid two-col">
+                <img src="images/IMG_3403.jpeg" alt="Us" class="memory-photo">
+                <img src="images/IMG_3429.jpeg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="photo-grid single">
+                <img src="images/IMG_3061.jpg" alt="Us" class="memory-photo featured">
+            </div>
+
+            <div class="divider-hearts">💖 💖 💖</div>
+
             <!-- Two more photos -->
             <div class="photo-grid two-col">
                 <img src="images/IMG_9573.jpg" alt="Us" class="memory-photo tall">
                 <img src="images/IMG_9662.jpg" alt="Us" class="memory-photo tall">
+            </div>
+
+            <div class="love-note">
+                <p>I could look at pictures of us all day. Actually, I already do.</p>
+                <span class="note-emoji">🫠</span>
+            </div>
+
+            <!-- New photos batch 2 -->
+            <div class="photo-grid three-col">
+                <img src="images/IMG_3515.JPG" alt="Us" class="memory-photo">
+                <img src="images/IMG_4165.JPG" alt="Us" class="memory-photo">
+                <img src="images/IMG_4167.JPG" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="photo-grid two-col">
+                <img src="images/IMG_4218.JPG" alt="Us" class="memory-photo">
+                <img src="images/IMG_4528.jpg" alt="Us" class="memory-photo">
             </div>
 
             <div class="countdown-card">
@@ -793,10 +822,53 @@
 
             <div class="divider-hearts">💗 💗 💗</div>
 
-            <div class="photo-grid two-col">
-                <img src="images/IMG_6127.jpg" alt="Us" class="memory-photo">
-                <img src="images/IMG_7991.jpg" alt="Us" class="memory-photo">
+            <!-- New photos batch 3 -->
+            <div class="photo-grid three-col">
+                <img src="images/IMG_4542.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_4669.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_5784.JPG" alt="Us" class="memory-photo">
             </div>
+
+            <div class="love-note">
+                <p>You're my favorite person. Like, ever. Not even close.</p>
+                <span class="note-emoji">🥹</span>
+            </div>
+
+            <div class="photo-grid two-col">
+                <img src="images/IMG_5810.JPG" alt="Us" class="memory-photo tall">
+                <img src="images/IMG_6127.jpg" alt="Us" class="memory-photo tall">
+            </div>
+
+            <div class="photo-grid single">
+                <img src="images/IMG_7991.jpg" alt="Us" class="memory-photo featured">
+            </div>
+
+            <div class="divider-hearts">♡ ♡ ♡</div>
+
+            <!-- New photos batch 4 -->
+            <div class="photo-grid three-col">
+                <img src="images/IMG_8691.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_8745.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_8829.jpg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="love-note">
+                <p>Every single one of these is a core memory for me.</p>
+                <span class="note-emoji">💭</span>
+            </div>
+
+            <div class="photo-grid two-col">
+                <img src="images/IMG_8872.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_8878.jpg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="photo-grid three-col">
+                <img src="images/IMG_8944.jpg" alt="Us" class="memory-photo">
+                <img src="images/IMG_9097.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image.jpg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="divider-hearts">💕 💕 💕</div>
 
             <div class="love-note">
                 <p>You make everything better. Literally everything. Even the boring stuff.</p>
@@ -804,10 +876,19 @@
             </div>
 
             <!-- LP images -->
-            <div class="photo-grid three-col">
-                <img src="images/lp_image.jpg" alt="Us" class="memory-photo">
+            <div class="photo-grid two-col">
                 <img src="images/lp_image_2.jpg" alt="Us" class="memory-photo">
                 <img src="images/lp_image_3.jpg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="photo-grid three-col">
+                <img src="images/lp_image_4.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image_5.jpg" alt="Us" class="memory-photo">
+                <img src="images/lp_image_6.jpg" alt="Us" class="memory-photo">
+            </div>
+
+            <div class="photo-grid single">
+                <img src="images/lp_image_7.jpg" alt="Us" class="memory-photo featured">
             </div>
 
             <div class="divider-hearts">♡ ♡ ♡</div>
